--- a/NIBBS/build.gradle
+++ b/NIBBS/build.gradle
@@ -30,6 +30,9 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'com.google.android.gms:play-services-vision-common:19.1.3'
+    implementation 'com.github.gcacace:signature-pad:1.3.1'
+//    implementation 'asia.kanopi.tools:fingerscan:0.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
