--- a/settings.gradle
+++ b/settings.gradle
@@ -10,6 +10,7 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+        maven { url 'https://dl.bintray.com/shodgson/uareu4500reader' }
     }
 }
 rootProject.name = "NIBSS SDK"
