--- a/NIBBS/build.gradle
+++ b/NIBBS/build.gradle
@@ -1,5 +1,7 @@
 plugins {
     id 'com.android.library'
+    id 'org.jetbrains.kotlin.android'
+    id 'kotlin-android-extensions'
 }
 
 android {
@@ -38,4 +40,19 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    def camerax_version = '1.0.0-beta07'
+
+// CameraX core library using camera2 implementation
+
+    implementation "androidx.camera:camera-camera2:$camerax_version"
+
+// CameraX Lifecycle Library
+
+    implementation "androidx.camera:camera-lifecycle:$camerax_version"
+
+// CameraX View class
+
+    implementation 'androidx.camera:camera-view:1.0.0-alpha14'
+    implementation "androidx.core:core-ktx:1.7.0"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
