--- a/NIBBS/src/main/AndroidManifest.xml
+++ b/NIBBS/src/main/AndroidManifest.xml
@@ -5,7 +5,8 @@
     <application>
         <activity
             android:name=".PreviewActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity
             android:name=".BeginsignatureActivity"
             android:exported="false"
