--- a/NIBBS/build.gradle
+++ b/NIBBS/build.gradle
@@ -26,20 +26,6 @@ android {
     }
 }
 
-afterEvaluate {
-    publishing {
-        publications {
-            release(MavenPublication) {
-                from components.release
-
-                groupId = 'com.github.SamjiDiamond'
-                artifactId = 'Nibss_android_sdk'
-                version = '1.0.0'
-            }
-        }
-    }
-}
-
 dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.3.0'
@@ -66,4 +52,18 @@ dependencies {
 // CameraX View class
 
     implementation 'androidx.camera:camera-view:1.0.0-alpha14'
+}
+
+afterEvaluate {
+    publishing {
+        publications {
+            // Creates a Maven publication called "release".
+            release(MavenPublication) {
+                from components.release
+                groupId = 'com.github.SamjiDiamond'
+                artifactId = 'android-example'
+                version = '1.0'
+            }
+        }
+    }
 }
