--- a/NIBBS/build.gradle
+++ b/NIBBS/build.gradle
@@ -34,7 +34,7 @@ dependencies {
     implementation 'com.google.mlkit:face-detection:16.1.5'
     implementation 'com.google.android.gms:play-services-mlkit-face-detection:17.0.1'
     implementation 'com.github.gcacace:signature-pad:1.3.1'
-    implementation 'androidx.camera:camera-core:1.0.0'
+    implementation 'androidx.camera:camera-core:1.0.2'
 //    implementation 'asia.kanopi.tools:fingerscan:0.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
@@ -51,7 +51,8 @@ dependencies {
 
 // CameraX View class
 
-    implementation 'androidx.camera:camera-view:1.0.0-alpha14'
+    implementation 'androidx.camera:camera-view:1.1.0-beta02'
+    implementation 'com.android.volley:volley:1.2.1'
 }
 
 afterEvaluate {
