--- a/NIBBS/src/main/AndroidManifest.xml
+++ b/NIBBS/src/main/AndroidManifest.xml
@@ -2,11 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.nibbs">
 
-    <application>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <application
+        android:name=".volley.InitiateVolley">
         <activity
             android:name=".PreviewActivity"
-            android:exported="false"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+            android:exported="false"/>
         <activity
             android:name=".BeginsignatureActivity"
             android:exported="false"
@@ -70,6 +71,19 @@
                 android:resource="@xml/file_paths" />
         </provider>
 
+        <service
+            android:name=".services.Uploadservice"
+            android:label="Word service"
+            android:permission="android.permission.BIND_JOB_SERVICE" >
+
+        </service>
+        <receiver android:name=".services.MyStartServiceReceiver"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.intent.action.QUICKBOOT_POWERON" />
+            </intent-filter>
+        </receiver>
         <meta-data
             android:name="com.google.mlkit.vision.DEPENDENCIES"
             android:value="face" />
