--- a/NIBBS/build.gradle
+++ b/NIBBS/build.gradle
@@ -53,6 +53,7 @@ dependencies {
 
     implementation 'androidx.camera:camera-view:1.1.0-beta02'
     implementation 'com.android.volley:volley:1.2.1'
+    implementation fileTree(dir: 'libs', include: ['*.aar', '*.jar'])
 }
 
 afterEvaluate {
