--- a/NIBBS/build.gradle
+++ b/NIBBS/build.gradle
@@ -53,7 +53,20 @@ dependencies {
 
     implementation 'androidx.camera:camera-view:1.1.0-beta02'
     implementation 'com.android.volley:volley:1.2.1'
-    implementation fileTree(dir: 'libs', include: ['*.aar', '*.jar'])
+//    implementation fileTree(dir: 'libs', include: ['*.aar', '*.jar'])
+    compileOnly files('libs/dermalog.common-1.1.3.1846.jar')
+    compileOnly files('libs/DermalogAndroidCommon-2.0.2.aar')
+    compileOnly files('libs/DermalogBiometricPassportSdk-1.6.3.1944.jar')
+    compileOnly files('libs/DermalogBiometricPassportSdk-1.7.5.1944.aar')
+    compileOnly files('libs/DermalogBPTF1Plus-1.0.3.1944.aar')
+    compileOnly files('libs/DermalogBPTF10-1.2.8.1943.aar')
+    compileOnly files('libs/DermalogBPZF1-1.6.11.1943.aar')
+    compileOnly files('libs/DermalogBPZF10-1.0.7.1943.aar')
+    compileOnly files('libs/DermalogFingerCode3-3.6.0.1940.aar')
+    compileOnly files('libs/DermalogImageContainer-2.5.1.1938-SNAPSHOT.aar')
+    compileOnly files('libs/DermalogJNA-5.4.0.0.aar')
+    compileOnly files('libs/FourprintSegmentation2-1.15.0.1925.aar')
+    compileOnly files('libs/jna-5.4.0.jar')
 }
 
 afterEvaluate {
