--- a/NIBBS/build.gradle
+++ b/NIBBS/build.gradle
@@ -31,7 +31,6 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'com.google.mlkit:face-detection:16.1.5'
     implementation 'com.google.android.gms:play-services-mlkit-face-detection:17.0.1'
     implementation 'com.github.gcacace:signature-pad:1.3.1'
     implementation 'androidx.camera:camera-core:1.0.2'
@@ -55,18 +54,18 @@ dependencies {
     implementation 'com.android.volley:volley:1.2.1'
 //    implementation fileTree(dir: 'libs', include: ['*.aar', '*.jar'])
     compileOnly files('libs/dermalog.common-1.1.3.1846.jar')
-    compileOnly files('libs/DermalogAndroidCommon-2.0.2.aar')
     compileOnly files('libs/DermalogBiometricPassportSdk-1.6.3.1944.jar')
     compileOnly files('libs/DermalogBiometricPassportSdk-1.7.5.1944.aar')
-    compileOnly files('libs/DermalogBPTF1Plus-1.0.3.1944.aar')
-    compileOnly files('libs/DermalogBPTF10-1.2.8.1943.aar')
-    compileOnly files('libs/DermalogBPZF1-1.6.11.1943.aar')
-    compileOnly files('libs/DermalogBPZF10-1.0.7.1943.aar')
-    compileOnly files('libs/DermalogFingerCode3-3.6.0.1940.aar')
     compileOnly files('libs/DermalogImageContainer-2.5.1.1938-SNAPSHOT.aar')
-    compileOnly files('libs/DermalogJNA-5.4.0.0.aar')
-    compileOnly files('libs/FourprintSegmentation2-1.15.0.1925.aar')
     compileOnly files('libs/jna-5.4.0.jar')
+//    compileOnly files('libs/DermalogAndroidCommon-2.0.2.aar')
+//    compileOnly files('libs/DermalogBPTF1Plus-1.0.3.1944.aar')
+//    compileOnly files('libs/DermalogBPTF10-1.2.8.1943.aar')
+//    compileOnly files('libs/DermalogBPZF1-1.6.11.1943.aar')
+//    compileOnly files('libs/DermalogBPZF10-1.0.7.1943.aar')
+//    compileOnly files('libs/DermalogFingerCode3-3.6.0.1940.aar')
+//    compileOnly files('libs/DermalogJNA-5.4.0.0.aar')
+//    compileOnly files('libs/FourprintSegmentation2-1.15.0.1925.aar')
 }
 
 afterEvaluate {
